# iot-inventory-management

./: .gitignore  .gitmodules  .obsidian.vimrc  .pylintrc  README.md  acapy-env.yml  manage  meeting-2-milestones.md  pyproject.toml  question-to-collins.md  requirements.dev.noconda.txt  requirements.dev.txt  requirements.docker.txt  run  run_local_node  terminology.md  test.sh  todo.md
.archive/aries-client-rs/: Cargo.toml
.obsidian/: community-plugins.json  daily-notes.json  graph.json  hotkeys.json  workspace.json
_updating/: _new_file.py  _old_file.py
dailies/: 2023-06-01.md  2023-06-04.md  2023-06-07.md  2023-06-08.md  2023-06-14.md  2023-06-18.md  2023-06-20.md  2023-06-21.md  2023-06-22.md  2023-08-09-meeting.md
docker/: agent.dockerfile  auditor.dockerfile  updater.dockerfile
entry-docs/: Anmeldung-BScMScArbeiten-RVO22_en-220321-signed.xopp  ideas.md
graphs/: visualize_avg_issue.py  visualize_issuing.py
impl/: .ignore  Dockerfile  Makefile  README.md  acapy-env.yml  bin  issue-cred-faber.json  manage  pyproject.toml  requirements.txt  run  setup-100-nodes.sh  setup-many-nodes.sh  stop-nodes.sh  updater.dockerfile
impl/.archive/aries-vcx-example/aries-rust-example/: Cargo.toml
impl/archive/aries-vcx-example/: Cargo.toml
impl/archive/aries-vcx-example/src/: main.rs
impl/iroha-example/: Cargo.toml  README.md
impl/iroha-example/src/: main.rs
latex/: abbreviations.tex  abstract.tex  acknowledgments.tex  appendix.tex  bibliography.tex  glossary.tex  introduction.tex  references.bib  thesis.tex  unizhdt.sty
notes/: 0-milestone-definitions-meeting-2.md  1-use-cases.md  2-functional-architecture.md  4-hyperledger.md  ArminsFeedback.md  aries.md  assumptions.md  attacks.md  hyperledger.md  inventorying.md  mud.md  ota-updating.md  puf.md  terminology.md  x-related-readings.md
scripts/: blinkt_cpu_load.py  cpu_load.py  cryptoGen.sh  getDockerHost.sh  get_zerotier_addr.sh  setup-many-nodes.sh  setup.sh  stop-nodes.sh  stop.sh  teardown.sh  update_test.py
src/: auditor.py  updater.py
thesis/: 1-use-cases.md  3-iot-platform.md  (+25 more)
(+109 files in other folders)
