[package]
name = "iroha-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iroha_client = { path = "../iroha/client/" }
iroha_data_model = { path = "../iroha/data_model/" }
iroha_crypto = { path = "../iroha/crypto" }
iroha_config = { path = "../iroha/config" }
iroha_core = { path = "../iroha/core" }
iroha_primitives = { path = "../iroha/primitives" }

serde = "1.0.181"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
serde_json = "1.0.104"
