[package]
name = "aries-rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aries-vcx = { git = "https://github.com/hyperledger/aries-vcx", tag = "0.57.1" }
aries-vcx-agent = { git = "https://github.com/hyperledger/aries-vcx", tag = "0.57.1" }
aries_vcx_core = { git = "https://github.com/hyperledger/aries-vcx", tag = "0.57.1" }
